Remove dependency on e2e test step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -192,7 +192,7 @@ jobs:
 
   e2e-test:
     runs-on: ubuntu-latest
-    needs: publish-merlin-docker
+    # needs: publish-merlin-docker
     steps:
       - uses: actions/checkout@v2
         with:
