--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -201,7 +201,7 @@ jobs:
         with:
           repository: gojek/mlp
           ref: main
-          token: ${{ secrets.DSP_REPO_TOKEN }}
+          # token: ${{ secrets.DSP_REPO_TOKEN }}
           path: mlp
       - uses: actions/setup-go@v2
         with:
