Add HTTP_CLIENT_TIMEOUT in .env.sample

--- a/api/cmd/transformer/.env.sample
+++ b/api/cmd/transformer/.env.sample
@@ -11,6 +11,7 @@ FEAST_FEATURE_STATUS_MONITORING_ENABLED=true
 FEAST_FEATURE_VALUE_MONITORING_ENABLED=true
 
 HTTP_SERVER_TIMEOUT=30s
+HTTP_CLIENT_TIMEOUT=15s
 
 JAEGER_AGENT_HOST=localhost
 JAEGER_AGENT_PORT=6831
