Update value for mlflow

--- a/charts/merlin/values-e2e.yaml
+++ b/charts/merlin/values-e2e.yaml
@@ -87,8 +87,8 @@ mlflow:
   artifactRoot: s3://mlflow
   extraEnvs:
     # MinIO credentials
-    AWS_ACCESS_KEY_ID: YOURACCESSKEY
-    AWS_SECRET_ACCESS_KEY: YOURSECRETKEY
+    AWS_ACCESS_KEY_ID: accessKey
+    AWS_SECRET_ACCESS_KEY: secretKey
     MLFLOW_S3_ENDPOINT_URL: http://minio.minio:9000
 
 swagger:
