--- a/api/cmd/transformer/.env.sample
+++ b/api/cmd/transformer/.env.sample
@@ -9,3 +9,11 @@ MERLIN_TRANSFORMER_PORT=8080
 FEAST_SERVING_URL=localhost:6566
 FEAST_FEATURE_STATUS_MONITORING_ENABLED=true
 FEAST_FEATURE_VALUE_MONITORING_ENABLED=true
+
+HTTP_SERVER_TIMEOUT=30s
+HTTP_CLIENT_TIMEOUT=15s
+
+JAEGER_AGENT_HOST=localhost
+JAEGER_AGENT_PORT=6831
+JAEGER_SAMPLER_TYPE=const
+JAEGER_SAMPLER_PARAM=1
