--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -217,12 +217,12 @@ jobs:
           kubectl create secret generic vault-secret --namespace=mlp --from-literal=address=http://vault.vault.svc.cluster.local --from-literal=token=root
       - name: Deploy MLP
         run: |
-          export INGRESS_HOST=127.0.0.1
+          export INGRESS_HOST=$(kubectl get po -l istio=ingressgateway -n istio-system -o jsonpath='{.items[0].status.hostIP}')
           helm install mlp ./mlp/chart --namespace=mlp --values=./mlp/chart/values-e2e.yaml \
           --set mlp.image.tag=main \
           --set mlp.apiHost=http://mlp.mlp.${INGRESS_HOST}.nip.io/v1 \
           --set mlp.oauthClientID=${OAUTH_CLIENT_ID} \
-          --set mlp.mlflowTrackingUrl=http://mlflow.mlp.${INGRESS_HOST}.nip.io \
+          --set mlp.mlflowTrackingUrl=http://merlin-mlflow.mlp.${INGRESS_HOST}.nip.io \
           --set mlp.ingress.enabled=true \
           --set mlp.ingress.class=istio \
           --set mlp.ingress.host=mlp.mlp.${INGRESS_HOST}.nip.io \
