Change variable name

--- a/api/cmd/transformer/.env.sample
+++ b/api/cmd/transformer/.env.sample
@@ -10,7 +10,7 @@ FEAST_SERVING_URL=localhost:6566
 FEAST_FEATURE_STATUS_MONITORING_ENABLED=true
 FEAST_FEATURE_VALUE_MONITORING_ENABLED=true
 FEAST_BATCH_SIZE=5
-FEAST_TTL_IN_SEC=60
+FEAST_CACHE_TTL_IN_SEC=60
 FEAST_CACHE_ENABLED=true
 
 HTTP_SERVER_TIMEOUT=30s
