Add GH action support to PRs from fork

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,23 @@
 name: ci
-on: pull_request
+on: [pull_request, pull_request_target]
+
+.before_job_script: &before_job_script
+  if: >-
+    (
+      github.event_name == 'pull_request' &&
+      github.event.pull_request.head.repo.full_name == github.repository
+    ) || (
+      github.event_name == 'pull_request_target' &&
+      github.event.pull_request.head.repo.full_name != github.repository
+    )
+
 jobs:
   lint-ui:
+    <<: *before_job_script
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout to the target branch
+        uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: 12
@@ -14,6 +27,7 @@ jobs:
         run: make lint-ui
 
   lint-api:
+    <<: *before_job_script
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -28,6 +42,7 @@ jobs:
         run: make lint-api
 
   build-ui:
+    <<: *before_job_script
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -40,6 +55,7 @@ jobs:
         run: make build-ui
 
   build-api:
+    <<: *before_job_script
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -52,6 +68,7 @@ jobs:
         run: make build-api
 
   unit-test-python-sdk:
+    <<: *before_job_script
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -70,6 +87,7 @@ jobs:
         run: make unit-test
 
   integration-test-api:
+    <<: *before_job_script
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -130,6 +148,7 @@ jobs:
           tag_with_ref: true
 
   publish-merlin-transformer-docker:
+    <<: *before_job_script
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -145,6 +164,7 @@ jobs:
           tag_with_ref: true
 
   publish-pyfunc-base-docker:
+    <<: *before_job_script
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -161,6 +181,7 @@ jobs:
           tag_with_ref: true
 
   publish-pyspark-base-docker:
+    <<: *before_job_script
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -176,6 +197,7 @@ jobs:
           tag_with_ref: true
 
   publish-mlflow-docker:
+    <<: *before_job_script
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
