Address PR Review * Rename prometheus metric label * Simplify buildFeastFeatureData * Accept time.duration for cache ttl

--- a/api/cmd/transformer/.env.sample
+++ b/api/cmd/transformer/.env.sample
@@ -9,8 +9,8 @@ MERLIN_TRANSFORMER_PORT=8080
 FEAST_SERVING_URL=localhost:6566
 FEAST_FEATURE_STATUS_MONITORING_ENABLED=true
 FEAST_FEATURE_VALUE_MONITORING_ENABLED=true
-FEAST_BATCH_SIZE=5
-FEAST_CACHE_TTL_IN_SEC=60
+FEAST_BATCH_SIZE=50
+FEAST_CACHE_TTL=60s
 FEAST_CACHE_ENABLED=true
 
 HTTP_SERVER_TIMEOUT=30s
