--- a/.env.sample
+++ b/.env.sample
@@ -52,3 +52,5 @@ MONITORING_DASHBOARD_JOB_BASE_URL=http://monitoring.dev/batch-job-dashboard
 
 # MLP_API_HOST=
 MLP_API_ENCRYPTION_KEY=password
+
+# MLFLOW_TRACKING_URL=
