Fix mlflow URL.

--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -131,6 +131,10 @@ merlin:
   encryption:
     key: "password"
 
+  mlflow:
+    # This should be the actual DNS registered
+    trackingURL: "http://www.example.com"
+
 mlflow:
   image:
     registry: ghcr.io
