Add default logger

--- a/charts/merlin/values-e2e.yaml
+++ b/charts/merlin/values-e2e.yaml
@@ -1,6 +1,6 @@
 merlin:
   environment: dev
-  loggerDestinationURL: "http://logger.default"
+  loggerDestinationURL: "http://message-dumper.mlp.svc.cluster.local"
   image:
     tag: 0.7.0
   replicaCount: 1
