--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,9 @@
 name: ci
-on: [pull_request, pull_request_target]
+on: [pull_request, pull_request_target, push]
 
 jobs:
   lint-ui:
-    if: >-
-      (
-        github.event_name == 'pull_request' &&
-        github.event.pull_request.head.repo.full_name == github.repository
-      ) || (
-        github.event_name == 'pull_request_target' &&
-        github.event.pull_request.head.repo.full_name != github.repository
-      )
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout to the target branch
@@ -24,14 +17,7 @@ jobs:
         run: make lint-ui
 
   lint-api:
-    if: >-
-      (
-        github.event_name == 'pull_request' &&
-        github.event.pull_request.head.repo.full_name == github.repository
-      ) || (
-        github.event_name == 'pull_request_target' &&
-        github.event.pull_request.head.repo.full_name != github.repository
-      )
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -46,14 +32,7 @@ jobs:
         run: make lint-api
 
   build-ui:
-    if: >-
-      (
-        github.event_name == 'pull_request' &&
-        github.event.pull_request.head.repo.full_name == github.repository
-      ) || (
-        github.event_name == 'pull_request_target' &&
-        github.event.pull_request.head.repo.full_name != github.repository
-      )
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -66,14 +45,7 @@ jobs:
         run: make build-ui
 
   build-api:
-    if: >-
-      (
-        github.event_name == 'pull_request' &&
-        github.event.pull_request.head.repo.full_name == github.repository
-      ) || (
-        github.event_name == 'pull_request_target' &&
-        github.event.pull_request.head.repo.full_name != github.repository
-      )
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -86,14 +58,7 @@ jobs:
         run: make build-api
 
   unit-test-python-sdk:
-    if: >-
-      (
-        github.event_name == 'pull_request' &&
-        github.event.pull_request.head.repo.full_name == github.repository
-      ) || (
-        github.event_name == 'pull_request_target' &&
-        github.event.pull_request.head.repo.full_name != github.repository
-      )
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -119,6 +84,9 @@ jobs:
       ) || (
         github.event_name == 'pull_request_target' &&
         github.event.pull_request.head.repo.full_name != github.repository
+      ) || (
+        github.event_name == 'push' &&
+        github.event.pull_request.head.repo.full_name == github.repository
       )
     runs-on: ubuntu-latest
     services:
@@ -144,6 +112,17 @@ jobs:
         run: make it-test-api-ci
 
   publish-merlin-docker:
+    if: >-
+      (
+        github.event_name == 'pull_request' &&
+        github.event.pull_request.head.repo.full_name == github.repository
+      ) || (
+        github.event_name == 'pull_request_target' &&
+        github.event.pull_request.head.repo.full_name != github.repository
+      ) || (
+        github.event_name == 'push' &&
+        github.event.pull_request.head.repo.full_name == github.repository
+      )
     runs-on: ubuntu-latest
     needs: integration-test-api
     steps:
@@ -165,6 +144,9 @@ jobs:
       ) || (
         github.event_name == 'pull_request_target' &&
         github.event.pull_request.head.repo.full_name != github.repository
+      ) || (
+        github.event_name == 'push' &&
+        github.event.pull_request.head.repo.full_name == github.repository
       )
     runs-on: ubuntu-latest
     steps:
@@ -188,6 +170,9 @@ jobs:
       ) || (
         github.event_name == 'pull_request_target' &&
         github.event.pull_request.head.repo.full_name != github.repository
+      ) || (
+        github.event_name == 'push' &&
+        github.event.pull_request.head.repo.full_name == github.repository
       )
     runs-on: ubuntu-latest
     steps:
@@ -211,6 +196,9 @@ jobs:
       ) || (
         github.event_name == 'pull_request_target' &&
         github.event.pull_request.head.repo.full_name != github.repository
+      ) || (
+        github.event_name == 'push' &&
+        github.event.pull_request.head.repo.full_name == github.repository
       )
     runs-on: ubuntu-latest
     steps:
@@ -234,6 +222,9 @@ jobs:
       ) || (
         github.event_name == 'pull_request_target' &&
         github.event.pull_request.head.repo.full_name != github.repository
+      ) || (
+        github.event_name == 'push' &&
+        github.event.pull_request.head.repo.full_name == github.repository
       )
     runs-on: ubuntu-latest
     steps:
@@ -251,6 +242,17 @@ jobs:
           tags: 1.3.0
 
   e2e-test:
+    if: >-
+      (
+        github.event_name == 'pull_request' &&
+        github.event.pull_request.head.repo.full_name == github.repository
+      ) || (
+        github.event_name == 'pull_request_target' &&
+        github.event.pull_request.head.repo.full_name != github.repository
+      ) || (
+        github.event_name == 'push' &&
+        github.event.pull_request.head.repo.full_name == github.repository
+      )
     runs-on: ubuntu-latest
     needs: publish-merlin-docker
     steps:
