--- a/api/cmd/transformer/.env.sample
+++ b/api/cmd/transformer/.env.sample
@@ -9,6 +9,9 @@ MERLIN_TRANSFORMER_PORT=8080
 FEAST_SERVING_URL=localhost:6566
 FEAST_FEATURE_STATUS_MONITORING_ENABLED=true
 FEAST_FEATURE_VALUE_MONITORING_ENABLED=true
+FEAST_BATCH_SIZE=50
+FEAST_CACHE_TTL=60s
+FEAST_CACHE_ENABLED=true
 
 HTTP_SERVER_TIMEOUT=30s
 HTTP_CLIENT_TIMEOUT=15s
@@ -17,3 +20,5 @@ JAEGER_AGENT_HOST=localhost
 JAEGER_AGENT_PORT=6831
 JAEGER_SAMPLER_TYPE=const
 JAEGER_SAMPLER_PARAM=1
+
+CACHE_SIZE_IN_MB=100
