--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,16 @@ on: [pull_request, pull_request_target, push]
 
 jobs:
   lint-ui:
-    if: github.event_name == 'push'
+    if: >-
+      (
+        github.event_name == 'pull_request' &&
+        github.event.pull_request.head.repo.full_name == github.repository
+      ) || (
+        github.event_name == 'pull_request_target' &&
+        github.event.pull_request.head.repo.full_name != github.repository
+      ) || (
+        github.event_name == 'push'
+      )
     runs-on: ubuntu-latest
     steps:
       - name: Checkout to the target branch
@@ -17,7 +26,16 @@ jobs:
         run: make lint-ui
 
   lint-api:
-    if: github.event_name == 'push'
+    if: >-
+      (
+        github.event_name == 'pull_request' &&
+        github.event.pull_request.head.repo.full_name == github.repository
+      ) || (
+        github.event_name == 'pull_request_target' &&
+        github.event.pull_request.head.repo.full_name != github.repository
+      ) || (
+        github.event_name == 'push'
+      )
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -32,7 +50,16 @@ jobs:
         run: make lint-api
 
   build-ui:
-    if: github.event_name == 'push'
+    if: >-
+      (
+        github.event_name == 'pull_request' &&
+        github.event.pull_request.head.repo.full_name == github.repository
+      ) || (
+        github.event_name == 'pull_request_target' &&
+        github.event.pull_request.head.repo.full_name != github.repository
+      ) || (
+        github.event_name == 'push'
+      )
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -45,7 +72,16 @@ jobs:
         run: make build-ui
 
   build-api:
-    if: github.event_name == 'push'
+    if: >-
+      (
+        github.event_name == 'pull_request' &&
+        github.event.pull_request.head.repo.full_name == github.repository
+      ) || (
+        github.event_name == 'pull_request_target' &&
+        github.event.pull_request.head.repo.full_name != github.repository
+      ) || (
+        github.event_name == 'push'
+      )
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
