--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "object-assign-deep": "0.4.0",
     "proper-url-join": "^2.1.1",
     "react": "16.13.1",
+    "react-collapsed": "^3.0.1",
     "react-dom": "16.13.1",
     "react-ellipsis-text": "^1.2.1",
     "react-lazylog": "^4.5.1",
