Change the ordering of pyfuncserver remove_merlin_sdk_dependency
Previously, pyfuncserver dependencies are installed with following sequences:
1. install user dependencies
2. install base server dependencies
This result in base server dependencies getting priority over user dependencies.

The modification in this commit is to switch the order of dependency installation.
So that all package specified by user results in correct version.

--- a/python/pyfunc-server/requirements.txt
+++ b/python/pyfunc-server/requirements.txt
@@ -1,4 +1,9 @@
-joblib==0.14.1
-numpy==1.17.2
-scikit-learn==0.22.1
-xgboost==0.90
+kfserving==0.2.1.1
+argparse>=1.4.0
+numpy >= 1.8.2
+mlflow==1.6.0
+cloudpickle==1.2.2
+prometheus_client==0.7.1
+uvloop>=0.15.2
+orjson==2.6.8
+merlin-sdk==0.10.0
