--- a/python/pyfunc-server/Dockerfile
+++ b/python/pyfunc-server/Dockerfile
@@ -17,16 +17,18 @@ FROM continuumio/miniconda3
 ARG MODEL_URL
 ENV WORKERS 1
 
+# TODO: Move this to base.Dockerfile
 COPY . .
 RUN wget -qO- https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-265.0.0-linux-x86_64.tar.gz | tar xzf -
 ENV PATH=$PATH:/google-cloud-sdk/bin
 RUN mkdir /prom_dir
 ENV prometheus_multiproc_dir=/prom_dir
+RUN conda env create -f ./environment.yaml && \
+    rm -rf /root/.cache
 
 RUN gsutil cp -r ${MODEL_URL} .
-RUN conda env create --name model_env -f ./model/conda.yaml
-RUN /bin/bash -c ". activate model_env && \
-    pip install -e . && \
+RUN /bin/bash -c ". activate merlin-model && \
+    conda env update --name merlin-model --file /model/conda.yaml && \
     python -m pyfuncserver --model_dir /model --dry_run"
 
 CMD ["/bin/bash", "./run.sh"]
