--- a/charts/merlin/values-e2e.yaml
+++ b/charts/merlin/values-e2e.yaml
@@ -1,5 +1,6 @@
 merlin:
   environment: dev
+  loggerDestinationURL: "http://message-dumper.mlp.svc.cluster.local"
   image:
     tag: 0.7.0
   replicaCount: 1
@@ -93,6 +94,7 @@ mlflow:
     # MinIO credentials
     AWS_ACCESS_KEY_ID: YOURACCESSKEY
     AWS_SECRET_ACCESS_KEY: YOURSECRETKEY
+    AWS_DEFAULT_REGION: ap-southeast-2
     MLFLOW_S3_ENDPOINT_URL: http://minio.minio:9000
 
 swagger:
