Enable external host from merlin-chart

--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -135,6 +135,9 @@ merlin:
     # This should be the actual DNS registered
     trackingURL: "http://www.example.com"
 
+  database:
+    host: "localhost"
+
 mlflow:
   image:
     registry: ghcr.io
