Change default to values-e2e

--- a/charts/merlin/values-e2e.yaml
+++ b/charts/merlin/values-e2e.yaml
@@ -66,6 +66,9 @@ merlin:
     # This should be the actual DNS registered
     trackingURL: "http://www.example.com"
 
+  database:
+    host: "localhost"
+
 postgresql:
   resources:
     requests:
