--- a/charts/merlin/templates/deployment.yaml
+++ b/charts/merlin/templates/deployment.yaml
@@ -79,8 +79,14 @@ spec:
             value: "{{ .Values.merlin.loggerDestinationURL }}"
           - name: PORT
             value: "{{ .Values.merlin.service.internalPort }}"
+          {{- if .Values.postgresql.enabled }}
           - name: DATABASE_HOST
             value: {{ template "postgresql.host" . }}
+          {{- else -}}
+          - name: DATABASE_HOST
+            value: {{ .Values.merlin.database.host }}
+          {{- end }}
+          {{- end }}
           - name: DATABASE_USER
             value: "{{ .Values.postgresql.postgresqlUsername }}"
           - name: DATABASE_PASSWORD
