--- a/charts/merlin/values-e2e.yaml
+++ b/charts/merlin/values-e2e.yaml
@@ -66,10 +66,17 @@ merlin:
     # This should be the actual DNS registered
     trackingURL: "http://www.example.com"
 
-  database:
-    host: "localhost"
-    user: "root"
-    name: "mlflow"
+  # Database connection used by Merlin backend when postgres is disabled
+  #
+  # database:
+  #   host: database host
+  #   user: database user
+  #   name: database name
+
+  # database:
+  #   host: "localhost"
+  #   user: "root"
+  #   name: "merlin"
 
 postgresql:
   enabled: true
