--- a/charts/merlin/templates/deployment.yaml
+++ b/charts/merlin/templates/deployment.yaml
@@ -86,6 +86,11 @@ spec:
             value: "{{ .Values.postgresql.postgresqlUsername }}"
           - name: DATABASE_NAME
             value: "{{ .Values.postgresql.postgresqlDatabase }}"
+          - name: DATABASE_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: {{ .Release.Name }}-postgresql
+                key: postgresql-password
           {{- else -}}
           - name: DATABASE_HOST
             value: "{{ .Values.merlin.database.host }}"
@@ -93,12 +98,12 @@ spec:
             value: "{{ .Values.merlin.database.user }}"
           - name: DATABASE_NAME
             value: "{{ .Values.merlin.database.name }}"
-          {{- end }}
           - name: DATABASE_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: {{ .Release.Name }}-postgresql
-                key: postgresql-password
+                name: {{ .Values.merlin.database.password.secretName }}
+                key:  {{ .Values.merlin.database.password.secretKey }}
+          {{- end }}
           - name: REACT_APP_OAUTH_CLIENT_ID
             value: "{{ .Values.merlin.oauthClientID }}"
           - name: REACT_APP_ENVIRONMENT
